--- a/Client/src/app/identity/register/register.component.html
+++ b/Client/src/app/identity/register/register.component.html
@@ -114,7 +114,11 @@
     role="alert"
   >
     <strong><i class="fa fa-exclamation-triangle mr-2"></i> Invalid {{field | titlecase}}</strong>
-    <div *ngFor="let message of this.getErrors(field); let index = index">{{index + 1}}.
-      {{this.formGroup.get(field).errors[message]}}</div>
+    <div *ngFor="let message of this.getErrors(field); let index = index">
+      <div *ngIf="this.formGroup.get(field).errors[message].toString() == 'true'; then client; else server">
+      </div>
+      <ng-template #client>{{field | titlecase}} is required</ng-template>
+      <ng-template #server>{{this.formGroup.get(field).errors[message]}}</ng-template>
+    </div>
   </div>
 </ng-template>
