--- a/Client/src/docs/components/AppointmentsComponent.html
+++ b/Client/src/docs/components/AppointmentsComponent.html
@@ -36,7 +36,7 @@
 
 <ol class="breadcrumb">
   <li>Components</li>
-  <li>DialogComponent</li>
+  <li>AppointmentsComponent</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -62,7 +62,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/@common/components/dialog/dialog.component.ts</code>
+    <code>src/app/schedule/appointments/appointments.component.ts</code>
 </p>
 
 
@@ -92,19 +92,19 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-dialog</code></td>
+                <td class="col-md-9"><code>app-appointments</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./dialog.component.scss</code></td>
+                <td class="col-md-9"><code>./appointments.component.scss</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./dialog.component.html</code></td>
+                <td class="col-md-9"><code>./appointments.component.html</code></td>
             </tr>
 
 
@@ -132,15 +132,7 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                    <span class="modifier">Public</span>
-                                <a href="#hideDialog">hideDialog</a>
-                            </li>
-                            <li>
                                 <a href="#ngOnInit">ngOnInit</a>
-                            </li>
-                            <li>
-                                    <span class="modifier">Public</span>
-                                <a href="#showDialog">showDialog</a>
                             </li>
                         </ul>
                     </td>
@@ -160,45 +152,15 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(service: <a href="../injectables/DialogService.html">DialogService</a>)</code>
+<code>constructor()</code>
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/@common/components/dialog/dialog.component.ts:9</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">src/app/schedule/appointments/appointments.component.ts:8</a></div>
                             </td>
                         </tr>
 
-                <tr>
-                    <td class="col-md-4">
-                            <div>
-                                    <b>Parameters :</b>
-                                    <table class="params">
-                                        <thead>
-                                            <tr>
-                                                <td>Name</td>
-                                                    <td>Type</td>
-                                                <td>Optional</td>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                                <tr>
-                                                        <td>service</td>
-                                                  
-                                                        <td>
-                                                                        <code><a href="../injectables/DialogService.html" target="_self" >DialogService</a></code>
-                                                        </td>
-                                                  
-                                                    <td>
-                                                            No
-                                                    </td>
-                                                    
-                                                </tr>
-                                        </tbody>
-                                    </table>
-                            </div>
-                    </td>
-                </tr>
             </tbody>
         </table>
 </section>
@@ -212,47 +174,6 @@
     <h3 id="methods">
         Methods
     </h3>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="hideDialog"></a>
-                    <span class="name">
-                        <b>
-                            <span class="modifier">Public</span>
-                            hideDialog
-                        </b>
-                        <a href="#hideDialog"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-                    <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>hideDialog()</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="21"
-                            class="link-to-prism">src/app/@common/components/dialog/dialog.component.ts:21</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
     <table class="table table-sm table-bordered">
         <tbody>
             <tr>
@@ -275,49 +196,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="15"
-                            class="link-to-prism">src/app/@common/components/dialog/dialog.component.ts:15</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="showDialog"></a>
-                    <span class="name">
-                        <b>
-                            <span class="modifier">Public</span>
-                            showDialog
-                        </b>
-                        <a href="#showDialog"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-                    <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>showDialog()</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="17"
-                            class="link-to-prism">src/app/@common/components/dialog/dialog.component.ts:17</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="12"
+                            class="link-to-prism">src/app/schedule/appointments/appointments.component.ts:12</a></div>
                 </td>
             </tr>
 
@@ -339,53 +219,34 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;
-import { DialogService } from &#x27;@services/dialog.service&#x27;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
 
 @Component({
-  selector: &#x27;app-dialog&#x27;,
-  templateUrl: &#x27;./dialog.component.html&#x27;,
-  styleUrls: [&#x27;./dialog.component.scss&#x27;]
+  selector: &#x27;app-appointments&#x27;,
+  templateUrl: &#x27;./appointments.component.html&#x27;,
+  styleUrls: [&#x27;./appointments.component.scss&#x27;]
 })
-export class DialogComponent implements OnInit {
-  constructor(private service: DialogService) {
-    this.service.hideDialog$.subscribe({ next: () &#x3D;&gt; this.hideDialog() });
-    this.service.showDialog$.subscribe({ next: () &#x3D;&gt; this.showDialog() });
+export class AppointmentsComponent implements OnInit {
+
+  constructor() { }
+
+  ngOnInit() {
   }
 
-  ngOnInit() { }
-
-  public showDialog() {
-    const dialog &#x3D; document.getElementById(&quot;dialog&quot;);
-    dialog.style.display &#x3D; &quot;block&quot;;
-  }
-  public hideDialog() {
-    const dialog &#x3D; document.getElementById(&quot;dialog&quot;);
-    dialog.style.display &#x3D; &quot;none&quot;;
-  }
-}</code></pre>
+}
+</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div
-  id&#x3D;&quot;dialog&quot;
-  class&#x3D;&quot;dialog&quot;
-&gt;
-  &lt;div class&#x3D;&quot;dialog-content&quot;&gt;
-    &lt;span
-      id&#x3D;&quot;dialog-close&quot;
-      class&#x3D;&quot;close&quot;
-      (click)&#x3D;&quot;this.hideDialog()&quot;
-    &gt;&amp;times;&lt;/span&gt;
-    &lt;ng-content&gt;&lt;/ng-content&gt;
-  &lt;/div&gt;
-
-&lt;/div&gt;</code></pre>
+        <pre class="line-numbers"><code class="language-html">&lt;p&gt;
+  appointments works!
+&lt;/p&gt;
+</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./dialog.component.scss</code>
+                    <code>./appointments.component.scss</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss"></code></pre>
     </div>
@@ -415,10 +276,10 @@ export class DialogComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div  id="dialog"  class="dialog">  <div class="dialog-content">    <span      id="dialog-close"      class="close"      (click)="this.hideDialog()"    >&times;</span>    <ng-content></ng-content>  </div></div></div>'
-    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'app-about'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'AppointmentComponent', 'selector': 'app-appointment'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'IdentityComponent', 'selector': 'app-identity'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'NavigationComponent', 'selector': 'app-navigation'},{'name': 'RegisterComponent', 'selector': 'app-register'},{'name': 'ScheduleComponent', 'selector': 'app-schedule'}];
+        var COMPONENT_TEMPLATE = '<div><p>  appointments works!</p></div>'
+    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'app-about'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'AppointmentComponent', 'selector': 'app-appointment'},{'name': 'AppointmentsComponent', 'selector': 'app-appointments'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'IdentityComponent', 'selector': 'app-identity'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'NavigationComponent', 'selector': 'app-navigation'},{'name': 'RegisterComponent', 'selector': 'app-register'},{'name': 'ScheduleComponent', 'selector': 'app-schedule'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'DialogComponent'};
+    var ACTUAL_COMPONENT = {'name': 'AppointmentsComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
@@ -453,7 +314,7 @@ export class DialogComponent implements OnInit {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
-            var COMPODOC_CURRENT_PAGE_URL = 'DialogComponent.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'AppointmentsComponent.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
